--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@types/styled-components": "^5.1.25",
     "framer-motion": "^6.3.3",
     "graphql": "^16.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
